exercices/Ingress/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: vote
spec:
 ingressClassName: traefik
 rules:
 - host: vote.votingapp.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: vote-ui
           port:
             number: 80
 - host: result.votingapp.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: result-ui
           port:
             number: 80
